--- a/SaaS/4-7-17/views/ask.handlebars
+++ b/SaaS/4-7-17/views/ask.handlebars
@@ -1,4 +1,4 @@
-<form method="get" action="/question/{{id}}">
+<form method="get" action="/new_ques">
   <label>{{content}}</label>
   <input type="submit" value="YES">
   <input type="submit" value="NO">
