--- a/SaaS/4-7-17/views/home.handlebars
+++ b/SaaS/4-7-17/views/home.handlebars
@@ -1,1 +1,5 @@
-<h1>Title</h1>
+<form method="get" action="/question/{{id}}">
+  <label>{{content}}</label>
+  <input name='ans' type="submit" value="YES">
+  <input name='ans' type="submit" value="NO">
+</form>
