--- a/SaaS/4-7-17/views/ask.handlebars
+++ b/SaaS/4-7-17/views/ask.handlebars
@@ -1,5 +1,18 @@
-<form method="get" action="/new_ques">
-  <label>{{content}}</label>
-  <input type="submit" value="YES">
-  <input type="submit" value="NO">
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <nav class="menu">
+      <a href="/question">ANSWER</a>
+      <a href="/ask">ASK</a>
+    </nav>
+    <form method="post" action='/question'>
+      <label>ADD A NEW QUESTION</label></br>
+        <input type = 'text' name = 'question' autofocus/>
+        <input type = 'submit'/>
+    </form>
+  </body>
+</html>
